    The font and family settings are still ignored.
  - Transparency in material textures was not always rendered properly.
  - In OSX, the Carbon system has been replaced by a Cocoa system.
    (Code contributed by Adam Strzelecki).  For compatibility with the
    Windows build system, the new files have been put into src/osx.
  - Hardware antialiasing is now used if the OpenGL driver supports
    it.  Set options(rgl.antialias=0) to disable it.
  - Bug fix for divide.mesh3d() in handling normals.
  - Functions rgl.attrib.count() and rgl.attrib() (and internal function
    rgl.getmaterial()) added to allow objects in the scene to be examined.
  - rgl.ids() did not return all object ids as documented.
  - Updated gl2ps to version 1.3.6
  
v0.92.861
  - Fixed segfault on startup on Windows in MDI mode.
  - Added rgl.save.texture() to get texture from an object.
  
v0.92.879
  - Removed rgl.save.texture():  textures are not saveable!
  - Added writeWebGL() function, to allow scenes to be viewed in a web
    browser.
  - Added "centers" to the attributes that can be queried, for depth sorted 
    transparent rendering.
  
 v0.92.880
  - Rearranged declarations for compatibility with gcc 4.7.
  
 v0.92.881
  - Fixed degenerate (e.g. straight line) cases in cylinder3d
  
 v0.92.883
  - Added 3d "sprites" -- shapes that maintain their initial orientation.
  
 v0.92.887  
  - Added "caps" to the end of cylinder3d() objects.
  
 v0.92.891
  - Added support for 3d sprites to writeWebGL.
  
 v0.92.892
  - Added declaration needed by Solaris.
  
 v0.92.893
  - rgl.light() and light3d() did not return the light ID value. 
  
 v0.92.894
  - remove debugging code from configure.win that was causing problems
    on the CRAN WinBuilder system
  
 v0.93.910
  - Added readSTL and writeSTL functions
  - Added expand argument to decorate3d and axes3d
  - Added base argument to spin3d result
  - Added writePLY and writeOBJ functions
  - Added scene3d function